--- a/Caro-WPF.csproj
+++ b/Caro-WPF.csproj
@@ -19,6 +19,9 @@
     <None Update="Resources\OST\keycard_theme.mp3">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\OST\victory_theme.opus">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
